--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,22 @@ version: '3.1'
 
 services:
 
+  backend:
+    image: maven:3.6.3-jdk-8
+    command: mvn clean spring-boot:run
+    depends_on:
+      - db
+    environment:
+      MYSQL_HOST: db
+    ports:
+      - 5000:5000
+    volumes:
+      - .:/usr/src/mymaven:rw
+    working_dir: /usr/src/mymaven
+
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
     ports:
@@ -13,6 +25,5 @@ services:
 
   adminer:
     image: adminer
-    restart: always
     ports:
       - 8080:8080
