--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:db_example}
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD:example}
-spring.devtools.remote.secret=myremotesecret
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:exampledb}
+spring.datasource.username=${MYSQL_USERNAME:exampleuser}
+spring.datasource.password=${MYSQL_PASSWORD:examplepass}
+spring.devtools.remote.secret=exampleremotesecret
