--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
-
   backend:
+    platform: linux/amd64
     image: maven:3.6.3-jdk-8
     command: mvn spring-boot:run
     depends_on:
@@ -18,6 +18,7 @@ services:
     working_dir: /usr/src/mymaven
 
   db:
+    platform: linux/amd64
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: examplerootpassword
@@ -30,6 +31,7 @@ services:
     #   - ./src/db-setup.sql:/docker-entrypoint-initdb.d/dump.sql
 
   adminer:
+    platform: linux/amd64
     image: adminer
     ports:
       - 8080:8080
